# flac-codec

./: .clang-tidy  .gitignore  CMakeLists.txt  Dependencies.cmake  Makefile  ProjectOptions.cmake  README
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake
include/flac_codec/: byte_flac_input.h  flac_low_level_input.h
include/flac_codec/common/: frame_info.h  seek_table.h  stream_info.h
include/flac_codec/decode/: byte_flac_input.h  data_format_exception.h  flac_decoder.h  flac_low_level_input.h  frame_decoder.h  seekable_file_flac_input.h
src/: CMakeLists.txt  byte_flac_input.cpp  flac_low_level_input.cpp  main.cpp
src/commom/: frame_info.cpp
src/common/: frame_info.cpp  seek_table.cpp  stream_info.cpp
src/decode/: byte_flac_input.cpp  flac_decoder.cpp  flac_low_level_input.cpp  frame_decoder.cpp  seekable_file_flac_input.cpp
